--- a/test/OpenTelemetry.Sampler.AWS.Tests/OpenTelemetry.Sampler.AWS.Tests.csproj
+++ b/test/OpenTelemetry.Sampler.AWS.Tests/OpenTelemetry.Sampler.AWS.Tests.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\OpenTelemetry.Sampler.AWS\OpenTelemetry.Sampler.AWS.csproj" />
+    <ProjectReference Include="$(RepoRoot)\src\OpenTelemetry.Sampler.AWS\OpenTelemetry.Sampler.AWS.csproj" />
   </ItemGroup>
 
   <ItemGroup>
