--- a/.github/component_owners.yml
+++ b/.github/component_owners.yml
@@ -27,8 +27,6 @@ components:
   src/OpenTelemetry.Extensions.AzureMonitor/:
     - rajkumar-rangaraj
     - vishweshbankwar
-  src/OpenTelemetry.Extensions.Docker/:
-    - iskiselev
   src/OpenTelemetry.Extensions.Enrichment/:
     - xakep139
   src/OpenTelemetry.PersistentStorage.Abstractions/:
@@ -65,6 +63,8 @@ components:
   src/OpenTelemetry.ResourceDetectors.Azure/:
     - rajkumar-rangaraj
     - vishweshbankwar
+  src/OpenTelemetry.ResourceDetectors.Container/:
+    - iskiselev
   src/OpenTelemetry.Sampler.AWS/:
     - srprash
   test/OpenTelemetry.Contrib.Extensions.AWSXRay.Tests/:
@@ -108,8 +108,6 @@ components:
   test/OpenTelemetry.Extensions.AzureMonitor.Tests/:
     - rajkumar-rangaraj
     - vishweshbankwar
-  test/OpenTelemetry.Extensions.Docker.Tests/:
-    - iskiselev
   test/OpenTelemetry.Extensions.Enrichment.Tests/:
     - xakep139
   test/OpenTelemetry.PersistentStorage.FileSystem.Tests/:
@@ -142,5 +140,7 @@ components:
   test/OpenTelemetry.ResourceDetectors.Azure.Tests/:
     - rajkumar-rangaraj
     - vishweshbankwar
+  test/OpenTelemetry.ResourceDetectors.Container.Tests/:
+    - iskiselev
   test/OpenTelemetry.Sampler.AWS.Tests/:
     - srprash
