--- a/src/OpenTelemetry.Exporter.Geneva/OpenTelemetry.Exporter.Geneva.csproj
+++ b/src/OpenTelemetry.Exporter.Geneva/OpenTelemetry.Exporter.Geneva.csproj
@@ -10,6 +10,7 @@
     <TargetFrameworks Condition="$(OS) == 'Windows_NT'">$(TargetFrameworks);net462</TargetFrameworks>
     <MinVerTagPrefix>Exporter.Geneva-</MinVerTagPrefix>
     <EnableAnalysis>true</EnableAnalysis>
+    <IncludeSharedExceptionExtensionSource>true</IncludeSharedExceptionExtensionSource>
   </PropertyGroup>
 
   <ItemGroup>
