--- a/src/OpenTelemetry.ResourceDetectors.Container/OpenTelemetry.ResourceDetectors.Container.csproj
+++ b/src/OpenTelemetry.ResourceDetectors.Container/OpenTelemetry.ResourceDetectors.Container.csproj
@@ -5,6 +5,7 @@
     <Description>OpenTelemetry Extensions - Container Resource Detector from Container environment.</Description>
     <MinVerTagPrefix>ResourceDetectors.Container-</MinVerTagPrefix>
     <Nullable>enable</Nullable>
+    <IncludeSharedExceptionExtensionSource>true</IncludeSharedExceptionExtensionSource>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="OpenTelemetry" Version="$(OpenTelemetryCoreLatestVersion)" />
