--- a/test/OpenTelemetry.Sampler.AWS.Tests/OpenTelemetry.Sampler.AWS.Tests.csproj
+++ b/test/OpenTelemetry.Sampler.AWS.Tests/OpenTelemetry.Sampler.AWS.Tests.csproj
@@ -21,9 +21,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Data\GetSamplingRulesResponse.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
+    <None Update="Data\GetSamplingRulesResponse.json" CopyToOutputDirectory="PreserveNewest" />
+    <None Update="Data\GetSamplingRulesResponse_1.json" CopyToOutputDirectory="PreserveNewest" />
+    <None Update="Data\GetSamplingTargetsResponse.json" CopyToOutputDirectory="PreserveNewest" />
+    <None Update="Data\GetSamplingTargetsResponse_1.json" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
 
 </Project>
