Add component owner for InfluxDB

--- a/.github/component_owners.yml
+++ b/.github/component_owners.yml
@@ -15,6 +15,8 @@ components:
     - reyang
     - utpilla
     - Yun-Ting
+  src/OpenTelemetry.Exporter.InfluxDB/:
+    - havret
   src/OpenTelemetry.Exporter.Instana/:
     - zivaninstana
   src/OpenTelemetry.Exporter.OneCollector/:
@@ -95,6 +97,8 @@ components:
     - reyang
     - utpilla
     - Yun-Ting
+  test/OpenTelemetry.Exporter.InfluxDB.Tests/:
+    - havret
   test/OpenTelemetry.Exporter.Instana.Tests/:
     - zivaninstana
   test/OpenTelemetry.Exporter.OneCollector.Benchmarks/:
