[Sampler.AWS] Part-3: Update targets. Add rate limiting and fixed rate samplers. (#1151)

--- a/test/OpenTelemetry.Sampler.AWS.Tests/OpenTelemetry.Sampler.AWS.Tests.csproj
+++ b/test/OpenTelemetry.Sampler.AWS.Tests/OpenTelemetry.Sampler.AWS.Tests.csproj
@@ -21,9 +21,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Data\GetSamplingRulesResponse.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
+    <None Update="Data\GetSamplingRulesResponse.json" CopyToOutputDirectory="PreserveNewest" />
+    <None Update="Data\GetSamplingRulesResponseOptionalFields.json" CopyToOutputDirectory="PreserveNewest" />
+    <None Update="Data\GetSamplingTargetsResponse.json" CopyToOutputDirectory="PreserveNewest" />
+    <None Update="Data\GetSamplingTargetsResponseOptionalFields.json" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
 
 </Project>
