--- a/examples/InfluxDB/Examples.InfluxDB/Examples.InfluxDB.csproj
+++ b/examples/InfluxDB/Examples.InfluxDB/Examples.InfluxDB.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="OpenTelemetry.Instrumentation.Runtime" Version="$(RuntimeInstrumentationPkgVer)" />
+    <PackageReference Include="OpenTelemetry.Instrumentation.Runtime" Version="1.4.0" />
   </ItemGroup>
 
   <ItemGroup>
