--- a/.github/component_owners.yml
+++ b/.github/component_owners.yml
@@ -3,7 +3,7 @@
 # Each component identified by its path prefix has a list of users
 # Please add the entries in alphabetically sorted order
 components:
-  src/OpenTelemetry.Contrib.Extensions.AWSXRay/:
+  src/OpenTelemetry.Extensions.AWS/:
     - srprash
     - atshaw43
   src/OpenTelemetry.Contrib.Instrumentation.AWS/:
@@ -73,7 +73,7 @@ components:
   src/OpenTelemetry.Sampler.AWS/:
     - srprash
     - atshaw43
-  test/OpenTelemetry.Contrib.Extensions.AWSXRay.Tests/:
+  test/OpenTelemetry.Extensions.AWS.Tests/:
     - srprash
     - atshaw43
   test/OpenTelemetry.Contrib.Instrumentation.AWS.Tests/:
