--- a/examples/wcf/client-netframework/App.config
+++ b/examples/wcf/client-netframework/App.config
@@ -11,6 +11,10 @@
         <behavior name="telemetry">
           <telemetryExtension />
         </behavior>
+        <behavior name="webHttp">
+          <telemetryExtension />
+          <webHttp />
+        </behavior>
       </endpointBehaviors>
     </behaviors>
     <bindings>
@@ -28,6 +32,7 @@
     <client>
       <endpoint address="http://localhost:9009/Telemetry" binding="basicHttpBinding" bindingConfiguration="basicHttpConfig" behaviorConfiguration="telemetry" contract="Examples.Wcf.IStatusServiceContract" name="StatusService_Http" />
       <endpoint address="net.tcp://localhost:9090/Telemetry" binding="netTcpBinding" bindingConfiguration="netTCPConfig" behaviorConfiguration="telemetry" contract="Examples.Wcf.IStatusServiceContract" name="StatusService_Tcp" />
+      <endpoint address="http://localhost:9009/Telemetry/rest" binding="webHttpBinding" behaviorConfiguration="webHttp" contract="Examples.Wcf.IStatusServiceContract" name="StatusService_Rest" />
     </client>
   </system.serviceModel>
 </configuration>
