--- a/.github/workflows/package-Instrumentation.AWS.yml
+++ b/.github/workflows/package-Instrumentation.AWS.yml
@@ -1,4 +1,4 @@
-name: Pack OpenTelemetry.Contrib.Instrumentation.AWS
+name: Pack OpenTelemetry.Instrumentation.AWS
 
 on:
   workflow_dispatch:
@@ -17,7 +17,7 @@ jobs:
     permissions:
       contents: write
     env:
-      PROJECT: OpenTelemetry.Contrib.Instrumentation.AWS
+      PROJECT: OpenTelemetry.Instrumentation.AWS
 
     strategy:
       matrix:
